src/test/deca/context/valid/test_print.deca
// Description:
//    Programme minimaliste utilisant println.
//
// Resultats:
//    Hello
//
// Historique:
//    cree le 01/01/2024

{
        print("Hello, world!");
        print(12);
        print(12.34);
}
