src/test/deca/context/invalid/wobj/test_condition_string.deca
// Description:
//    programme avec if.
//
// Resultats:
//    ligne 12 : Votre condition doit etre de type boolean
//
// Historique:
//    cree le 01/01/2024

{
string s = "true";
if(s){
    print("valid");
}
}
